But, if you encounter execution rights problem, you can still copy _syside-cli.js_ in a place where you have the appropriate rights and use the _org.eclipse.syson.syside.path_ application option.
- https://github.com/eclipse-syson/syson/issues/433[#433] [tests] Add scripts to setup and udpate the integration testing environment

=== New features

- https://github.com/eclipse-syson/syson/issues/315[#315] [tests] Add Cypress test infrastructure and execute the Cypress tests as part of pull request checks
- https://github.com/eclipse-syson/syson/issues/358[#358] [diagrams] Handle the JoinNode concept in actions body of diagrams
- https://github.com/eclipse-syson/syson/issues/359[#359] [tests] Add tests to enforce a set of conventions on SysON DiagramDescriptions
- https://github.com/eclipse-syson/syson/issues/371[#371] [diagrams] Handle the ForkNode concept in actions body of diagrams
- https://github.com/eclipse-syson/syson/issues/381[#381] [diagrams] Handle the MergeNode concept in actions body of diagrams
- https://github.com/eclipse-syson/syson/issues/389[#389] [diagrams] Handle the DecisionNode concept in actions body of diagrams
- https://github.com/eclipse-syson/syson/issues/391[#391] [diagrams] AcceptAction is now available inside an Action body
- https://github.com/eclipse-syson/syson/issues/393[#393] [diagrams] Handle the ExhibitState concept in diagrams
- https://github.com/eclipse-syson/syson/issues/423[#423] [diagrams] Add new documentation compartment on all existing nodes in all diagrams.
- https://github.com/eclipse-syson/syson/issues/420[#420] [diagrams] Handle AssignmentAction concept in actions body in diagrams
- https://github.com/eclipse-syson/syson/issues/405[#405] [tests] Add integration test infrastructure
- [doc] Initial contribution of the documentation

== v2024.5.0

=== Breaking changes
